--- a/templates/managecontent.html
+++ b/templates/managecontent.html
@@ -49,21 +49,21 @@
                 </a>
             </li>
             <li class="nav-item">
-                <a href="#" class="nav-link">
+                <a href="{% url 'manage_experience' %}">
                     <i class="fas fa-briefcase"></i>
                     <span>Manage Experience</span>
                 </a>
             </li>
             <li class="nav-item">
-                <a href="#" class="nav-link">
+                <a href="{% url 'manage_projects' %}">
                     <i class="fas fa-project-diagram"></i>
                     <span>Manage Projects</span>
                 </a>
             </li>
             <li class="nav-item">
-                <a href="#" class="nav-link">
-                    <i class="fas fa-file-pdf"></i>
-                    <span>Update Resume</span>
+                <a href="{% url 'manage_education' %}" class="nav-link">
+                    <i class="fas fa-graduation-cap"></i>
+                    <span>Manage Education</span>
                 </a>
             </li>
             <li class="nav-item">
