--- a/templates/manageprojects.html
+++ b/templates/manageprojects.html
@@ -11,15 +11,12 @@
     <link rel="stylesheet" href="{% static 'css/manageprojects.css' %}">
 </head>
 <body>
-    <!-- Mobile Menu Toggle -->
     <button class="mobile-menu-toggle" id="mobileMenuToggle">
         <i class="fas fa-bars"></i>
     </button>
 
-    <!-- Sidebar Overlay -->
     <div class="sidebar-overlay" id="sidebarOverlay"></div>
 
-    <!-- Sidebar -->
     <div class="sidebar">
         <div class="sidebar-header">
             <div class="admin-avatar-wrapper">
@@ -63,9 +60,9 @@
                 </a>
             </li>
             <li class="nav-item">
-                <a href="#">
-                    <i class="fas fa-file-pdf"></i>
-                    <span>Update Resume</span>
+                <a href="{% url 'manage_education' %}" class="nav-link">
+                    <i class="fas fa-graduation-cap"></i>
+                    <span>Manage Education</span>
                 </a>
             </li>
             <li class="nav-item">
@@ -77,7 +74,6 @@
         </ul>
     </div>
 
-    <!-- Main Content -->
     <div class="main-content">
         <div class="top-bar">
             <h1 class="page-title">
@@ -88,7 +84,6 @@
             </button>
         </div>
 
-        <!-- Messages -->
         {% if messages %}
         <div class="container mt-3">
             {% for message in messages %}
@@ -101,7 +96,6 @@
         </div>
         {% endif %}
 
-        <!-- Projects Grid -->
         <div class="container-fluid mt-4">
             <div class="row">
                 {% for project in projects %}
@@ -160,7 +154,6 @@
                     </div>
                 </div>
 
-                <!-- Edit Project Modal -->
                 <div class="modal fade" id="editProjectModal{{ project.id }}" tabindex="-1">
                     <div class="modal-dialog modal-lg">
                         <div class="modal-content">
@@ -272,7 +265,6 @@
                     </div>
                 </div>
 
-                <!-- Delete Project Modal -->
                 <div class="modal fade" id="deleteProjectModal{{ project.id }}" tabindex="-1">
                     <div class="modal-dialog modal-dialog-centered">
                         <div class="modal-content">
@@ -315,7 +307,6 @@
         </div>
     </div>
 
-    <!-- Add Project Modal -->
     <div class="modal fade" id="addProjectModal" tabindex="-1">
         <div class="modal-dialog modal-lg">
             <div class="modal-content">
@@ -424,7 +415,6 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.2/js/bootstrap.bundle.min.js"></script>
     <script>
-        // Mobile menu toggle
         const mobileMenuToggle = document.getElementById('mobileMenuToggle');
         const sidebar = document.querySelector('.sidebar');
         const sidebarOverlay = document.getElementById('sidebarOverlay');
@@ -444,7 +434,6 @@
             mobileMenuToggle.querySelector('i').classList.add('fa-bars');
         });
 
-        // Auto-dismiss alerts
         setTimeout(function() {
             const alerts = document.querySelectorAll('.alert');
             alerts.forEach(alert => {
